# Vellum

./: ARCHITECTURE.md  IMPLEMENTATION_CHECKLIST.md  PROXYMANAGER.md  QUICKSTART.md  README.md  SUMMARY.md  UPGRADES.md  VELLUM_V2_ROADMAP.md  run.bat  run.sh  start-frontend.sh
vellum/: CMakeLists.txt  Dockerfile  README.md  VM_MECHANICS.md
vellum/frontend/: package-lock.json  package.json
vellum/frontend/public/: index.html
vellum/frontend/src/: App.js  index.css
vellum/frontend/src/components/: GPUManager.js  VMConsole.js  VMList.js  VMMetrics.js
vellum/include/: APISchema.h  APIServer.h  GPUManager.h  HypervisorManager.h  ProxyManager.h  VMInstance.h
vellum/src/: APIServer.cpp  APIServer_Upgrades.cpp  GPUManager.cpp  HypervisorManager.cpp  HypervisorManager_Upgrades.cpp  KVMRunLoop.cpp  ProxyManager.cpp  VMInstance.cpp  VMInstance_Mechanics.cpp  VMInstance_Upgrades.cpp  WebSocketBridge.cpp  main.cpp
vellum/src/cgroup/: CgroupManager.cpp  CgroupManager.h
